--- a/MyProjectAss/web/timetable.html
+++ b/MyProjectAss/web/timetable.html
@@ -60,7 +60,7 @@
                     <tr>
                         <th>Week: <select>
                                 <option>10/11-16/11</option>
-                                <option>19/11-27/11</option>
+                                <option>19/11-27/11</option>x
                             </select><br></th>
                         <th>10/11</th>
                         <th>11/11 </th>
